# LSLforAndroid

./: CMakeLists.txt  README.md  local.properties  settings.gradle
dependecies/liblsl-Java/src/edu/ucsd/sccn/: LSL.java
dependecies/liblsl-Java/src/examples/: ReceiveData.java  ReceiveStringMarkers.java
gradle/wrapper/: gradle-wrapper.properties
libAndroidLSL/: CMakeLists.txt  build.gradle
libAndroidLSL/src/androidTest/java/lib/android/lsl/: ExampleInstrumentedTest.java
libAndroidLSL/src/main/: AndroidManifest.xml
libAndroidLSL/src/main/cpp/: native-lib.cpp
libAndroidLSL/src/main/java/lib/android/lsl/: lsltestApp.java
libAndroidLSL/src/main/res/values/: strings.xml
libAndroidLSL/src/test/java/lib/android/lsl/: ExampleUnitTest.java
